# roughly

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yaml
graphics/: icon.tex
roughly/approximate/: krylov.py  lowrank.py  sketch.py  test_krylov.py  test_trace.py  trace.py
roughly/core/: krylov.py  random.py  rng.py  test_krylov.py
roughly/solve/: leastsquares.py
tests/: test_krylov.py  test_lowrank.py  test_trace.py
